--- a/src/components/ToyDetail/ToyDetail.css
+++ b/src/components/ToyDetail/ToyDetail.css
@@ -1,5 +1,9 @@
 
-
+.header-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .detail-container {
     display: flex;
@@ -29,3 +33,4 @@ p {
     margin: 20px 0;
     font-weight: 600;
 }
+
