--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,33 @@
 
 
+.title-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0;
+    position: relative;
+}
+
 h1 {
     text-align: center;
-    margin: 20px;
+    margin: 0 20px;
+}
+
+.icon {
+    color: blue;
+    font-size: 40px;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    margin-left: 30px;
+}
+
+.red-box {
+    background-color: tomato;
+    color: white;
+    width: 25px;
+    height: 25px;
+    text-align: center;
+    translate: 32px -14px;
+    border-radius: 6px;
 }
