--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -4,3 +4,18 @@
     justify-content: center;
     align-items: center;
 }
+
+.home-btn {
+    padding-bottom: 15px;
+}
+
+.home-icon {
+    font-size: 25px;
+    color: blue;
+    margin-left: 15px;
+    translate:  0 7px;
+}
+
+.error-title {
+    margin-top: 25px;
+}
