--- a/src/components/ToyDetail/ToyDetail.css
+++ b/src/components/ToyDetail/ToyDetail.css
@@ -55,7 +55,7 @@ p {
     padding-bottom: 15px;
 }
 
-.cart-icon {
+.toy-detail-cart-icon {
     font-size: 25px;
     margin-left: 15px;
     translate:  0 7px;
