--- a/src/components/Toys/Toys.css
+++ b/src/components/Toys/Toys.css
@@ -45,7 +45,7 @@ p {
     padding-bottom: 15px;
 }
 
-.cart-icon {
+.toys-cart-icon {
     font-size: 25px;
     margin-left: 15px;
     translate:  0 7px;
