--- a/src/components/ShoppingCart/ShoppingCart.css
+++ b/src/components/ShoppingCart/ShoppingCart.css
@@ -72,3 +72,24 @@
     position: absolute;
     right: 45px;
 }
+
+h2 {
+    text-align: center;
+}
+
+.table-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 80vw;
+    margin: 0% 15%;
+    margin-bottom: 50px;
+    border-radius: 12px;
+    padding: 15px;
+    box-shadow: 5px 5px 5px 3px rgb(206, 198, 206); 
+}
+
+.item-img {
+    width: 15%;
+}
